overlays/full-security/gatekeeper-core/constraint-template-no-serviceaccount-token.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snoserviceaccounttoken
spec:
  crd:
    spec:
      names:
        kind: K8sNoServiceAccountToken
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoserviceaccounttoken

        violation[{"msg": msg}] {
          sa := input.review.object.spec.automountServiceAccountToken
          sa == true
          msg := "automountServiceAccountToken must not be true"
        }
