overlays/full-security/gatekeeper-core/constraint-template-require-resources.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireresources
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireresources

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.requests.cpu
          msg := "Missing resources.requests.cpu"
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.requests.memory
          msg := "Missing resources.requests.memory"
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.limits.cpu
          msg := "Missing resources.limits.cpu"
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.limits.memory
          msg := "Missing resources.limits.memory"
        }
